fixing spacing for #216

--- a/ui/app/styles/main.less
+++ b/ui/app/styles/main.less
@@ -317,6 +317,11 @@ footer .text-muted {
   }
 }
 
+.panel-danger > .panel-heading {
+  .ml-badge {
+    margin-right: 5px;
+  }
+}
 /* Facets*/
 .facet-selected {
   font-weight: bold;
